Fixed nav bar on mobile shown offset Change tag color

--- a/src/Components/navBar/navBar.css
+++ b/src/Components/navBar/navBar.css
@@ -37,5 +37,7 @@ nav a.active {
     nav {
         display: flex;
         flex-direction: row;
+        right: 50%;
+        transform: translateX(50%);
     }
 }
